@@ -1,84 +1,88 @@
 package emu.grasscutter.game.world;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Iterator;
-import java.util.List;
-import java.util.stream.Collectors;
+import static emu.grasscutter.server.event.player.PlayerTeleportEvent.TeleportType.SCRIPT;
 
+import emu.grasscutter.data.GameData;
+import emu.grasscutter.data.excels.dungeon.DungeonData;
+import emu.grasscutter.game.entity.EntityTeam;
+import emu.grasscutter.game.entity.EntityWorld;
 import emu.grasscutter.game.player.Player;
 import emu.grasscutter.game.player.Player.SceneLoadState;
 import emu.grasscutter.game.props.EnterReason;
 import emu.grasscutter.game.props.EntityIdType;
+import emu.grasscutter.game.props.PlayerProperty;
 import emu.grasscutter.game.props.SceneType;
-import emu.grasscutter.data.GameData;
-import emu.grasscutter.data.excels.DungeonData;
-import emu.grasscutter.data.excels.SceneData;
+import emu.grasscutter.game.quest.enums.QuestContent;
+import emu.grasscutter.game.world.data.TeleportProperties;
 import emu.grasscutter.net.packet.BasePacket;
 import emu.grasscutter.net.proto.EnterTypeOuterClass.EnterType;
 import emu.grasscutter.scripts.data.SceneConfig;
 import emu.grasscutter.server.event.player.PlayerTeleportEvent;
 import emu.grasscutter.server.event.player.PlayerTeleportEvent.TeleportType;
 import emu.grasscutter.server.game.GameServer;
-import emu.grasscutter.server.packet.send.PacketDelTeamEntityNotify;
-import emu.grasscutter.server.packet.send.PacketPlayerEnterSceneNotify;
-import emu.grasscutter.server.packet.send.PacketScenePlayerInfoNotify;
-import emu.grasscutter.server.packet.send.PacketSyncScenePlayTeamEntityNotify;
-import emu.grasscutter.server.packet.send.PacketSyncTeamEntityNotify;
-import emu.grasscutter.server.packet.send.PacketWorldPlayerInfoNotify;
-import emu.grasscutter.server.packet.send.PacketWorldPlayerRTTNotify;
-import emu.grasscutter.utils.Position;
+import emu.grasscutter.server.packet.send.*;
+import emu.grasscutter.utils.ConversionUtils;
 import it.unimi.dsi.fastutil.ints.Int2ObjectMap;
 import it.unimi.dsi.fastutil.ints.Int2ObjectMaps;
 import it.unimi.dsi.fastutil.ints.Int2ObjectOpenHashMap;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Iterator;
+import java.util.List;
+import lombok.Getter;
+import lombok.val;
+import org.jetbrains.annotations.NotNull;
 
 public class World implements Iterable<Player> {
-    private final GameServer server;
-    private final Player owner;
-    private final List<Player> players;
-    private final Int2ObjectMap<Scene> scenes;
+    @Getter private final GameServer server;
+    @Getter private final Player host;
+    @Getter private final List<Player> players;
+    @Getter private final Int2ObjectMap<Scene> scenes;
 
-    private int levelEntityId;
+    @Getter private EntityWorld entity;
     private int nextEntityId = 0;
     private int nextPeerId = 0;
     private int worldLevel;
 
-    private boolean isMultiplayer;
+    @Getter private boolean isMultiplayer, timeLocked = false;
+
+    private long lastUpdateTime;
+    @Getter private int tickCount = 0;
+    @Getter private boolean isPaused = false;
+    @Getter private long currentWorldTime;
 
     public World(Player player) {
         this(player, false);
     }
 
     public World(Player player, boolean isMultiplayer) {
-        this.owner = player;
+        this.host = player;
         this.server = player.getServer();
         this.players = Collections.synchronizedList(new ArrayList<>());
         this.scenes = Int2ObjectMaps.synchronize(new Int2ObjectOpenHashMap<>());
 
-        this.levelEntityId = this.getNextEntityId(EntityIdType.MPLEVEL);
+        // this.levelEntityId = this.getNextEntityId(EntityIdType.MPLEVEL);
+        this.entity = new EntityWorld(this);
         this.worldLevel = player.getWorldLevel();
         this.isMultiplayer = isMultiplayer;
 
-        this.owner.getServer().registerWorld(this);
-    }
+        this.lastUpdateTime = System.currentTimeMillis();
+        this.currentWorldTime = host.getPlayerGameTime();
 
-    public Player getHost() {
-        return owner;
-    }
-
-    public GameServer getServer() {
-        return server;
+        this.host.getServer().registerWorld(this);
     }
 
     public int getLevelEntityId() {
-        return levelEntityId;
+        return entity.getId();
     }
 
+    /**
+     * Gets the peer ID of the world's host.
+     *
+     * @return The peer ID of the world's host. 0 if the host is null.
+     */
     public int getHostPeerId() {
-        if (this.getHost() == null) {
-            return 0;
-        }
-        return this.getHost().getPeerId();
+        return this.getHost() == null ? 0 : this.getHost().getPeerId();
     }
 
     public int getNextPeerId() {
@@ -93,23 +97,21 @@ public class World implements Iterable<Player> {
         this.worldLevel = worldLevel;
     }
 
-    public List<Player> getPlayers() {
-        return players;
-    }
-
-    public Int2ObjectMap<Scene> getScenes() {
-        return this.scenes;
-    }
-
+    /**
+     * Gets an associated scene by ID. Creates a new instance of the scene if it doesn't exist.
+     *
+     * @param sceneId The scene ID.
+     * @return The scene.
+     */
     public Scene getSceneById(int sceneId) {
         // Get scene normally
-        Scene scene = this.getScenes().get(sceneId);
+        var scene = this.getScenes().get(sceneId);
         if (scene != null) {
             return scene;
         }
 
-        // Create scene from scene data if it doesnt exist
-        SceneData sceneData = GameData.getSceneDataMap().get(sceneId);
+        // Create scene from scene data if it doesn't exist
+        var sceneData = GameData.getSceneDataMap().get(sceneId);
         if (sceneData != null) {
             scene = new Scene(this, sceneData);
             this.registerScene(scene);
@@ -120,13 +122,15 @@ public class World implements Iterable<Player> {
     }
 
     public int getPlayerCount() {
-        return this.getPlayers().size();
+        return this.players.size();
     }
 
-    public boolean isMultiplayer() {
-        return isMultiplayer;
-    }
-
+    /**
+     * Gets the next entity ID for the specified entity type.
+     *
+     * @param idType The entity type.
+     * @return The next entity ID.
+     */
     public int getNextEntityId(EntityIdType idType) {
         return (idType.getId() << 24) + ++this.nextEntityId;
     }
@@ -148,11 +152,17 @@ public class World implements Iterable<Player> {
 
         // Set player variables
         player.setPeerId(this.getNextPeerId());
-        player.getTeamManager().setEntityId(this.getNextEntityId(EntityIdType.TEAM));
+        player.getTeamManager().setEntity(new EntityTeam(player));
+        // player.getTeamManager().setEntityId(this.getNextEntityId(EntityIdType.TEAM));
 
         // Copy main team to multiplayer team
         if (this.isMultiplayer()) {
-            player.getTeamManager().getMpTeam().copyFrom(player.getTeamManager().getCurrentSinglePlayerTeamInfo(), player.getTeamManager().getMaxTeamSize());
+            player
+                    .getTeamManager()
+                    .getMpTeam()
+                    .copyFrom(
+                            player.getTeamManager().getCurrentSinglePlayerTeamInfo(),
+                            player.getTeamManager().getMaxTeamSize());
             player.getTeamManager().setCurrentCharacterIndex(0);
         }
 
@@ -171,9 +181,13 @@ public class World implements Iterable<Player> {
         player.sendPacket(
                 new PacketDelTeamEntityNotify(
                         player.getSceneId(),
-                    this.getPlayers().stream().map(p -> p.getTeamManager().getEntityId()).collect(Collectors.toList())
-                )
-        );
+                        this.getPlayers().stream()
+                                .map(
+                                        p ->
+                                                p.getTeamManager().getEntity() == null
+                                                        ? 0
+                                                        : p.getTeamManager().getEntity().getId())
+                                .toList()));
 
         // Deregister
         this.getPlayers().remove(player);
@@ -195,7 +209,13 @@ public class World implements Iterable<Player> {
                 World world = new World(victim);
                 world.addPlayer(victim);
 
-                victim.sendPacket(new PacketPlayerEnterSceneNotify(victim, EnterType.ENTER_TYPE_SELF, EnterReason.TeamKick, victim.getSceneId(), victim.getPosition()));
+                victim.sendPacket(
+                        new PacketPlayerEnterSceneNotify(
+                                victim,
+                                EnterType.ENTER_TYPE_SELF,
+                                EnterReason.TeamKick,
+                                victim.getSceneId(),
+                                victim.getPosition()));
             }
         }
     }
@@ -205,14 +225,20 @@ public class World implements Iterable<Player> {
     }
 
     public void deregisterScene(Scene scene) {
+        scene.saveGroups();
         this.getScenes().remove(scene.getId());
+    }
+
+    public void save() {
+        this.getScenes().values().forEach(Scene::saveGroups);
     }
 
     public boolean transferPlayerToScene(Player player, int sceneId, Position pos) {
         return this.transferPlayerToScene(player, sceneId, TeleportType.INTERNAL, null, pos);
     }
 
-    public boolean transferPlayerToScene(Player player, int sceneId, TeleportType teleportType, Position pos) {
+    public boolean transferPlayerToScene(
+            Player player, int sceneId, TeleportType teleportType, Position pos) {
         return this.transferPlayerToScene(player, sceneId, teleportType, null, pos);
     }
 
@@ -220,79 +246,135 @@ public class World implements Iterable<Player> {
         return this.transferPlayerToScene(player, sceneId, TeleportType.DUNGEON, data, null);
     }
 
-    public boolean transferPlayerToScene(Player player, int sceneId, TeleportType teleportType, DungeonData dungeonData, Position teleportTo) {
+    public boolean transferPlayerToScene(
+            Player player,
+            int sceneId,
+            TeleportType teleportType,
+            DungeonData dungeonData,
+            Position teleportTo) {
+        EnterReason enterReason =
+                switch (teleportType) {
+                        // shouldn't affect the teleportation, but its clearer when inspecting the packets
+                        // TODO add more conditions for different reason.
+                    case INTERNAL -> EnterReason.TransPoint;
+                    case WAYPOINT -> EnterReason.TransPoint;
+                    case MAP -> EnterReason.TransPoint;
+                    case COMMAND -> EnterReason.Gm;
+                    case SCRIPT -> EnterReason.Lua;
+                    case CLIENT -> EnterReason.ClientTransmit;
+                    case DUNGEON -> EnterReason.DungeonEnter;
+                    default -> EnterReason.None;
+                };
+        return transferPlayerToScene(
+                player, sceneId, teleportType, enterReason, dungeonData, teleportTo);
+    }
+
+    public boolean transferPlayerToScene(
+            Player player,
+            int sceneId,
+            TeleportType teleportType,
+            EnterReason enterReason,
+            DungeonData dungeonData,
+            Position teleportTo) {
+        // Get enter types
+        val teleportProps =
+                TeleportProperties.builder()
+                        .sceneId(sceneId)
+                        .teleportType(teleportType)
+                        .enterReason(enterReason)
+                        .teleportTo(teleportTo)
+                        .enterType(EnterType.ENTER_TYPE_JUMP);
+
+        val sceneData = GameData.getSceneDataMap().get(sceneId);
+        if (dungeonData != null) {
+            teleportProps
+                    .teleportTo(dungeonData.getStartPosition())
+                    .teleportRot(dungeonData.getStartRotation());
+            teleportProps.enterType(EnterType.ENTER_TYPE_DUNGEON).enterReason(EnterReason.DungeonEnter);
+            teleportProps.dungeonId(dungeonData.getId());
+        } else if (player.getSceneId() == sceneId) {
+            teleportProps.enterType(EnterType.ENTER_TYPE_GOTO);
+        } else if (sceneData != null && sceneData.getSceneType() == SceneType.SCENE_HOME_WORLD) {
+            // Home
+            teleportProps.enterType(EnterType.ENTER_TYPE_SELF_HOME).enterReason(EnterReason.EnterHome);
+        }
+
+        return transferPlayerToScene(player, teleportProps.build());
+    }
+
+    public boolean transferPlayerToScene(Player player, TeleportProperties teleportProperties) {
+        // Check if the teleport properties are valid.
+        if (teleportProperties.getTeleportTo() == null)
+            teleportProperties.setTeleportTo(player.getPosition());
+
         // Call player teleport event.
-        PlayerTeleportEvent event = new PlayerTeleportEvent(player, teleportType, player.getPosition(), teleportTo);
+        PlayerTeleportEvent event =
+                new PlayerTeleportEvent(player, teleportProperties, player.getPosition());
         // Call event & check if it was canceled.
-        event.call(); if (event.isCanceled()) {
+        event.call();
+        if (event.isCanceled()) {
             return false; // Teleport was canceled.
         }
 
-        // Set the destination.
-        teleportTo = event.getDestination();
-
-        if (GameData.getSceneDataMap().get(sceneId) == null) {
+        if (GameData.getSceneDataMap().get(teleportProperties.getSceneId()) == null) {
             return false;
         }
 
         Scene oldScene = null;
-
         if (player.getScene() != null) {
             oldScene = player.getScene();
 
             // Don't deregister scenes if the player is going to tp back into them
-            if (oldScene.getId() == sceneId) {
+            if (oldScene.getId() == teleportProperties.getSceneId()) {
                 oldScene.setDontDestroyWhenEmpty(true);
             }
 
             oldScene.removePlayer(player);
         }
 
-        Scene newScene = this.getSceneById(sceneId);
-        newScene.setDungeonData(dungeonData);
+        var newScene = this.getSceneById(teleportProperties.getSceneId());
         newScene.addPlayer(player);
 
+        player.getTeamManager().applyAbilities(newScene);
+
         // Dungeon
+        // Dungeon system is handling this already
+        // if(dungeonData!=null){
+        //     var dungeonManager = new DungeonManager(newScene, dungeonData);
+        //     dungeonManager.startDungeon();
+        // }
+
         SceneConfig config = newScene.getScriptManager().getConfig();
-        if (teleportTo == null && config != null) {
+        if (teleportProperties.getTeleportTo() == null && config != null) {
             if (config.born_pos != null) {
-                teleportTo = newScene.getScriptManager().getConfig().born_pos;
+                teleportProperties.setTeleportTo(config.born_pos);
             }
             if (config.born_rot != null) {
-                player.getRotation().set(config.born_rot);
+                teleportProperties.setTeleportRot(config.born_rot);
             }
         }
 
-        // Set player position
-        if (teleportTo == null) {
-            teleportTo = player.getPosition();
+        // Set player position and rotation
+        if (teleportProperties.getTeleportTo() != null) {
+            player.getPosition().set(teleportProperties.getTeleportTo());
+        }
+        if (teleportProperties.getTeleportRot() != null) {
+            player.getRotation().set(teleportProperties.getTeleportRot());
         }
 
-        player.getPosition().set(teleportTo);
-
-        if (oldScene != null) {
+        if (oldScene != null && newScene != oldScene) {
             newScene.setPrevScene(oldScene.getId());
             oldScene.setDontDestroyWhenEmpty(false);
         }
 
-        // Get enter types
-        EnterType enterType = EnterType.ENTER_TYPE_JUMP;
-        EnterReason enterReason = EnterReason.TransPoint;
+        // Teleport packet
+        player.sendPacket(new PacketPlayerEnterSceneNotify(player, teleportProperties));
 
-        if (dungeonData != null) {
-            enterType = EnterType.ENTER_TYPE_DUNGEON;
-            enterReason = EnterReason.DungeonEnter;
-        } else if (oldScene == newScene) {
-            enterType = EnterType.ENTER_TYPE_GOTO;
-        } else if (newScene.getSceneType() == SceneType.SCENE_HOME_WORLD) {
-            // Home
-            enterReason = EnterReason.EnterHome;
-            enterType = EnterType.ENTER_TYPE_SELF_HOME;
-
+        if (teleportProperties.getTeleportType() != TeleportType.INTERNAL
+                && teleportProperties.getTeleportType() != SCRIPT) {
+            player.getQuestManager().queueEvent(QuestContent.QUEST_CONTENT_ANY_MANUAL_TRANSPORT);
         }
 
-        // Teleport packet
-        player.sendPacket(new PacketPlayerEnterSceneNotify(player, enterType, enterReason, sceneId, teleportTo));
         return true;
     }
 
@@ -303,14 +385,19 @@ public class World implements Iterable<Player> {
                 continue;
             }
 
-            // Update team of all players since max players has been changed - Probably not the best way to do it
+            // Update team of all players since max players has been changed - Probably not the best way
+            // to do it
             if (this.isMultiplayer()) {
-                player.getTeamManager().getMpTeam().copyFrom(player.getTeamManager().getMpTeam(), player.getTeamManager().getMaxTeamSize());
+                player
+                        .getTeamManager()
+                        .getMpTeam()
+                        .copyFrom(
+                                player.getTeamManager().getMpTeam(), player.getTeamManager().getMaxTeamSize());
                 player.getTeamManager().updateTeamEntities(null);
             }
 
             // Dont send packets if player is loading into the scene
-            if (player.getSceneLoadState().getValue() < SceneLoadState.INIT.getValue() ) {
+            if (player.getSceneLoadState().getValue() < SceneLoadState.INIT.getValue()) {
                 // World player info packets
                 player.getSession().send(new PacketWorldPlayerInfoNotify(this));
                 player.getSession().send(new PacketScenePlayerInfoNotify(this));
@@ -330,18 +417,152 @@ public class World implements Iterable<Player> {
         }
     }
 
-    // Returns true if the world should be deleted
+    /**
+     * Invoked every game tick.
+     *
+     * @return True if the world should be removed.
+     */
     public boolean onTick() {
+        // Check if there are players in this world.
         if (this.getPlayerCount() == 0) return true;
-        this.scenes.forEach((k, scene) -> scene.onTick());
+        // Tick all associated scenes.
+        this.getScenes().forEach((k, scene) -> scene.onTick());
+
+        // sync time every 10 seconds
+        if (this.tickCount % 10 == 0) {
+            this.getPlayers().forEach(p -> p.sendPacket(new PacketPlayerGameTimeNotify(p)));
+        }
+
+        // store updated world time every 60 seconds. (in-game hour)
+        if (this.tickCount % 60 == 0 && !this.timeLocked) {
+            this.getHost().updatePlayerGameTime(this.currentWorldTime);
+        }
+
+        this.tickCount++;
         return false;
     }
 
-    public void close() {
+    public void close() {}
 
+    /** Returns the in-game world time in real milliseconds. */
+    public long getWorldTime() {
+        if (!this.isPaused && !this.timeLocked) {
+            var newUpdateTime = System.currentTimeMillis();
+            this.currentWorldTime += (newUpdateTime - lastUpdateTime);
+            this.lastUpdateTime = newUpdateTime;
+        }
+
+        return this.currentWorldTime;
     }
 
-    @Override
+    /** Returns the current in game days world time in in-game minutes (0-1439) */
+    public int getGameTime() {
+        return (int) (getTotalGameTimeMinutes() % 1440);
+    }
+
+    /** Returns the current in game days world time in ingame hours (0-23) */
+    public int getGameTimeHours() {
+        return this.getGameTime() / 60;
+    }
+
+    /** Returns the total number of in game days that got completed since the beginning of the game */
+    public long getTotalGameTimeDays() {
+        return ConversionUtils.gameTimeToDays(getTotalGameTimeMinutes());
+    }
+
+    /**
+     * Returns the total number of in game hours that got completed since the beginning of the game
+     */
+    public long getTotalGameTimeHours() {
+        return ConversionUtils.gameTimeToHours(getTotalGameTimeMinutes());
+    }
+
+    /** Returns the elapsed in-game minutes since the creation of the world. */
+    public long getTotalGameTimeMinutes() {
+        return this.getWorldTime() / 1000;
+    }
+
+    /**
+     * Sets the world's pause status. Updates players and scenes accordingly.
+     *
+     * @param paused True if the world should be paused.
+     */
+    public void setPaused(boolean paused) {
+        // Check if this world is a multiplayer world.
+        if (this.isMultiplayer) return;
+
+        // Update the world time.
+        this.getWorldTime();
+        this.updateTime();
+
+        // If the world is being un-paused, update the last update time.
+        if (this.isPaused != paused && !paused) {
+            this.lastUpdateTime = System.currentTimeMillis();
+        }
+
+        this.isPaused = paused;
+        this.getPlayers().forEach(player -> player.setPaused(paused));
+        this.getScenes().forEach((key, scene) -> scene.setPaused(paused));
+    }
+
+    /**
+     * Changes the game time of the world.
+     *
+     * @param gameTime The time in game minutes.
+     */
+    public void changeTime(long gameTime) {
+        this.currentWorldTime = gameTime;
+
+        // Trigger script events.
+        this.players.forEach(
+                player -> player.getQuestManager().queueEvent(QuestContent.QUEST_CONTENT_GAME_TIME_TICK));
+    }
+
+    /**
+     * Changes the time of the world.
+     *
+     * @param time The new time in minutes.
+     * @param days The number of days to add.
+     */
+    public void changeTime(int time, int days) {
+        // Check if the time is locked.
+        if (this.timeLocked) return;
+
+        // Calculate time differences.
+        var currentTime = this.getGameTime();
+        var diff = time - currentTime;
+        if (diff < 0) diff = 1440 + diff;
+
+        // Update the world time.
+        this.currentWorldTime += days * 1440 * 1000L + diff * 1000L;
+
+        // Update all players.
+        this.host.updatePlayerGameTime(currentWorldTime);
+        this.players.forEach(
+                player -> player.getQuestManager().queueEvent(QuestContent.QUEST_CONTENT_GAME_TIME_TICK));
+    }
+
+    /** Notifies all players of the current world time. */
+    public void updateTime() {
+        this.getPlayers().forEach(p -> p.sendPacket(new PacketPlayerGameTimeNotify(p)));
+        this.getPlayers().forEach(p -> p.sendPacket(new PacketSceneTimeNotify(p)));
+    }
+
+    /**
+     * Locks the world time.
+     *
+     * @param locked True if the world time should be locked.
+     */
+    public void lockTime(boolean locked) {
+        this.timeLocked = locked;
+
+        // Notify players of the locking.
+        this.updateTime();
+        this.getPlayers()
+                .forEach(player -> player.setProperty(PlayerProperty.PROP_IS_GAME_TIME_LOCKED, locked));
+    }
+
+    @NotNull @Override
     public Iterator<Player> iterator() {
         return this.getPlayers().iterator();
     }
